# LMS_G03/LMS_G03/ViewModel/SubmitAssignmentModel.cs
@@ -1,6 +1,8 @@
-﻿using System;
+﻿using Microsoft.AspNetCore.Http;
+using System;
 using System.Collections.Generic;
 using System.ComponentModel.DataAnnotations;
+using System.IO;
 using System.Linq;
 using System.Threading.Tasks;
 
@@ -14,6 +16,7 @@ namespace LMS_G03.ViewModel
         [Required(ErrorMessage = "LectureId is required")]
         public string LectureId { get; set; }
         [Required(ErrorMessage = "File is required")]
-        public string FilePath { get; set; }
+        [DataType(DataType.Upload)]
+        public IFormFile uploadFile { get; set; }
     }
 }
